update setup page

--- a/Docker basics.html
+++ b/Docker basics.html
@@ -45,5 +45,10 @@ elles ne planteront pas en cas de mise à jour de votre OS
 
 </ul>
 
+
+<p>
+<a href="computer_tutorials.html">computer_tutorials</a>
+</p>
+
 </body>
 </html>
