--- a/computer/livres.html
+++ b/computer/livres.html
@@ -12,10 +12,11 @@
 
 <div id="livres-Programmation"><h2 id="Programmation" class="header"><a href="#livres-Programmation">Programmation</a></h2></div>
 
-<p>
-Je lis et pratique <a href="computer/sicp.html">sicp</a> (Structure and Implementation of Computer
-Programs).
-</p>
+<ul>
+<li>
+Build your own lisp
+
+</ul>
 
 <div id="livres-Programmation-Python"><h3 id="Python" class="header"><a href="#livres-Programmation-Python">Python</a></h3></div>
 
