--- a/computer/setup.html
+++ b/computer/setup.html
@@ -32,11 +32,11 @@ facture.
 </p>
 
 <p>
-<span id="setup-OS"></span><strong id="OS">OS</strong> : <del>Manjaro Linux</del>, je suis passé sur Ubuntu.
+<span id="setup-OS"></span><strong id="OS">OS</strong> : <del>Manjaro Linux</del>, <del>je suis passé sur Ubuntu.</del>, Now i use Arch btw.
 </p>
 
 <p>
-<span id="setup-Window manager"></span><strong id="Window manager">Window manager</strong> : <del>i3wm</del>, sway
+<span id="setup-Window manager"></span><strong id="Window manager">Window manager</strong> : i3wm 
 </p>
 
 <p>
@@ -44,7 +44,7 @@ facture.
 </p>
 
 <p>
-<span id="setup-Knowledge management"></span><strong id="Knowledge management">Knowledge management</strong> : vimwiki
+<span id="setup-Note taking"></span><strong id="Note taking">Note taking</strong> : vimwiki
 </p>
 
 <p>
@@ -52,7 +52,7 @@ facture.
 </p>
 
 <p>
-<span id="setup-Launcher"></span><strong id="Launcher">Launcher</strong> : rofi
+<span id="setup-Launcher"></span><strong id="Launcher">Launcher</strong> : <del>rofi</del>, dmenu
 </p>
 
 <p>
