--- a/computer/tutoriels.html
+++ b/computer/tutoriels.html
@@ -16,6 +16,7 @@
 <a href="tutoriels/git.html">git</a>
 <a href="code smells.html">code smells</a>
 <a href="tutoriels/pip.html">pip</a>
+<a href="web hacking.html">web hacking</a>
 </p>
 
 
@@ -30,6 +31,10 @@ pour trouver une solution efficace.
 <p>
 J'essaie donc de faire des tutos les plus courts possibles. 30 secondes est le
 maximum d'attention dont tu as besoin pour lire les tutos suivants.
+</p>
+
+<p>
+Please PR if you find a mistake.
 </p>
 
 <div id="tutoriels-How to install homebrew in Linux ?"><h2 id="How to install homebrew in Linux ?" class="header"><a href="#tutoriels-How to install homebrew in Linux ?">How to install homebrew in Linux ?</a></h2></div>
