--- a/index.html
+++ b/index.html
@@ -8,17 +8,33 @@
 </head>
 <body>
 
-<div id="Arctenis Chloria"><h1 id="Arctenis Chloria" class="header"><a href="#Arctenis Chloria">Arctenis Chloria</a></h1></div>
+<div id="Antharia Jack's wiki"><h2 id="Antharia Jack's wiki" class="header"><a href="#Antharia Jack's wiki">Antharia Jack's wiki</a></h2></div>
+
+<p>
+<img src="../tutoriels/assets/creative_coding_vintage.jpg" />
+</p>
 
 <p>
 <a href="computer.html">computer</a>
+</p>
+
+<p>
 <a href="audio.html">audio</a>
+</p>
+
+<p>
 <a href="livres.html">livres</a>
+</p>
+
+<p>
 <a href="citations.html">citations</a>
 </p>
 
 <p>
 <a href="diary/diary.html">blog</a>
+</p>
+
+<p>
 <a href="about.html">à propos</a>
 </p>
 
