--- a/tutoriels/git.html
+++ b/tutoriels/git.html
@@ -10,6 +10,10 @@
 
 <div id="git"><h1 id="git" class="header"><a href="#git">git</a></h1></div>
 
+<p>
+WIP
+</p>
+
 <div id="git-Démarrer un dépôt Git"><h2 id="Démarrer un dépôt Git" class="header"><a href="#git-Démarrer un dépôt Git">Démarrer un dépôt Git</a></h2></div>
 
 <p>
