--- a/computer/tutoriels.html
+++ b/computer/tutoriels.html
@@ -37,6 +37,34 @@ maximum d'attention dont tu as besoin pour lire les tutos suivants.
 Please PR if you find a mistake.
 </p>
 
+<div id="tutoriels-How to git from another directory ?"><h2 id="How to git from another directory ?" class="header"><a href="#tutoriels-How to git from another directory ?">How to git from another directory ?</a></h2></div>
+
+<p>
+<span id="tutoriels-How to git from another directory ?-git"></span><span class="tag" id="git">git</span>
+</p>
+
+<p>
+Requirements:
+</p>
+<ul>
+<li>
+git
+
+</ul>
+
+<p>
+For example with push :
+</p>
+
+<p>
+`git -c /your/repo/dir push -v
+</p>
+
+<p>
+-v is optional. It's the verbose output.
+</p>
+
+
 <div id="tutoriels-How to install homebrew in Linux ?"><h2 id="How to install homebrew in Linux ?" class="header"><a href="#tutoriels-How to install homebrew in Linux ?">How to install homebrew in Linux ?</a></h2></div>
 
 <p>
