--- a/diary/2022-04-29.html
+++ b/diary/2022-04-29.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-<div id="2022-04-29 - Premier poste"><h1 id="2022-04-29 - Premier poste" class="header"><a href="#2022-04-29 - Premier poste">2022-04-29 - Premier poste</a></h1></div>
+<div id="2022-04-29 - Premier post"><h1 id="2022-04-29 - Premier post" class="header"><a href="#2022-04-29 - Premier post">2022-04-29 - Premier post</a></h1></div>
+
+<p>
+Mmmmh.
+</p>
 
 </body>
 </html>
