--- a/audio.html
+++ b/audio.html
@@ -10,6 +10,8 @@
 
 <div id="audio"><h1 id="audio" class="header"><a href="#audio">audio</a></h1></div>
 
+<div id="audio-streaming"><h2 id="streaming" class="header"><a href="#audio-streaming">streaming</a></h2></div>
+
 <p>
 Listen to my music on <a href="https://bandcamp.com/noyaudur">bandcamp</a> and on
 <a href="https://soundcloud.com/noyaudur">soundcloud</a>.
