--- a/index.html
+++ b/index.html
@@ -8,34 +8,34 @@
 </head>
 <body>
 
-<div id="Antharia Jack's wiki"><h2 id="Antharia Jack's wiki" class="header"><a href="#Antharia Jack's wiki">Antharia Jack's wiki</a></h2></div>
+<div id="Antharia Jack"><h1 id="Antharia Jack" class="header"><a href="#Antharia Jack">Antharia Jack</a></h1></div>
+
+<div id="Antharia Jack-Teacher, designer."><h2 id="Teacher, designer." class="header"><a href="#Antharia Jack-Teacher, designer.">Teacher, designer.</a></h2></div>
 
 <p>
-<img src="../tutoriels/assets/creative_coding_vintage.jpg" />
+Hello, I'm Antharia Jack.
+</p>
+<blockquote>
+The cave you fear to enter holds the treasure you seek.
+</blockquote>
+<p>
+Joseph Campbell
+</p>
+<blockquote>
+Learning is not the product of teaching. Learning is the product of the
+activity of learners.
+</blockquote>
+<p>
+John Holt
 </p>
 
 <p>
-<a href="computer.html">computer</a>
+<a href="computer.html">computer</a> <a href="audio.html">audio</a> <a href="livres.html">livres</a> <a href="citations.html">citations</a> <a href="diary/diary.html">blog</a> <a href="about.html">à propos</a>
 </p>
 
-<p>
-<a href="audio.html">audio</a>
-</p>
 
 <p>
-<a href="livres.html">livres</a>
-</p>
-
-<p>
-<a href="citations.html">citations</a>
-</p>
-
-<p>
-<a href="diary/diary.html">blog</a>
-</p>
-
-<p>
-<a href="about.html">à propos</a>
+<img src="../assets/creative_coding_vintage.jpg" />
 </p>
 
 </body>
