--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
 <div id="Antharia Jack"><h1 id="Antharia Jack" class="header"><a href="#Antharia Jack">Antharia Jack</a></h1></div>
+<p>
+<img src="../assets/avatar.jpg" />
+</p>
 
 <div id="Antharia Jack-Teacher, designer."><h2 id="Teacher, designer." class="header"><a href="#Antharia Jack-Teacher, designer.">Teacher, designer.</a></h2></div>
 
