--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
 <body>
 
 <div id="Antharia Jack"><h1 id="Antharia Jack" class="header"><a href="#Antharia Jack">Antharia Jack</a></h1></div>
-<p>
-<img src="../assets/avatar.jpg" />
-</p>
 
 <div id="Antharia Jack-Teacher, designer."><h2 id="Teacher, designer." class="header"><a href="#Antharia Jack-Teacher, designer.">Teacher, designer.</a></h2></div>
 
 <p>
 Hello, I'm Antharia Jack.
+</p>
+
+<p>
+<a href="projects.html">projects</a> 
+<a href="computer.html">computer</a> 
+<a href="audio.html">audio</a> 
+<a href="livres.html">livres</a> 
+<a href="citations.html">citations</a> 
+<a href="diary/diary.html">blog</a> 
+<a href="about.html">à propos</a>
 </p>
 <blockquote>
 The cave you fear to enter holds the treasure you seek.
@@ -32,9 +39,6 @@ activity of learners.
 John Holt
 </p>
 
-<p>
-<a href="computer.html">computer</a> <a href="audio.html">audio</a> <a href="livres.html">livres</a> <a href="citations.html">citations</a> <a href="diary/diary.html">blog</a> <a href="about.html">à propos</a>
-</p>
 
 
 <p>
