Add noisedata project

--- a/projects.html
+++ b/projects.html
@@ -10,9 +10,13 @@
 
 <div id="projects"><h1 id="projects" class="header"><a href="#projects">projects</a></h1></div>
 
+
 <ul>
 <li>
 <a href="projects/sneakernet.html">sneakernet</a>
+
+<li>
+<a href="projects/noisedata.html">noisedata</a>
 
 </ul>
 
