Update default template

--- a/about.html
+++ b/about.html
@@ -7,40 +7,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="A propos"><h1 id="A propos" class="header"><a href="#A propos">A propos</a></h1></div>
 
 <p>
-Thèmes abordés ici :
-</p>
-<ul>
-<li>
-Linux
-
-<li>
-Terminal
-
-<li>
-Hacking
-
-<li>
-Python
-
-<li>
-Knowledge Management
-
-<li>
-Auto-formation et pédagogie
-
-</ul>
-
-<p>
 Ce site web est écrit et généré avec Vim et <a href="http://vimwiki.github.io">Vimwiki</a>.
-</p>
-
-<p>
+<hr />
 <a href="index.html">index</a>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
