--- a/audio.html
+++ b/audio.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="audio"><h1 id="audio" class="header"><a href="#audio">audio</a></h1></div>
 
 <div id="audio-streaming"><h2 id="streaming" class="header"><a href="#audio-streaming">streaming</a></h2></div>
@@ -51,5 +58,9 @@ ffmpeg
 <a href="computer.html">computer</a>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
