--- a/computer.html
+++ b/computer.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="computer"><h1 id="computer" class="header"><a href="#computer">computer</a></h1></div>
 
 <p>
@@ -26,5 +33,9 @@ Vous trouverez ici des <a href="computer/tutoriels.html">tutoriels</a> en 30 sec
 Revenir à l'<a href="index.html">index</a>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
