--- a/computer/livres.html
+++ b/computer/livres.html
@@ -7,23 +7,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="livres"><h1 id="livres" class="header"><a href="#livres">livres</a></h1></div>
 
 <div id="livres-Programmation"><h2 id="Programmation" class="header"><a href="#livres-Programmation">Programmation</a></h2></div>
 
-<<<<<<< HEAD
-<p>
-Je lis et pratique <a href="computer/sicp.html">sicp</a> (Structure and Implementation of Computer
-Programs).
-</p>
-=======
 <ul>
 <li>
 Build your own lisp
 
 </ul>
->>>>>>> update-setup
 
 <div id="livres-Programmation-Python"><h3 id="Python" class="header"><a href="#livres-Programmation-Python">Python</a></h3></div>
 
@@ -72,5 +72,9 @@ Two scoops of Django
 <a href="./">computer</a>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
