--- a/computer/setup.html
+++ b/computer/setup.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="setup"><h1 id="setup" class="header"><a href="#setup">setup</a></h1></div>
 
 <p>
@@ -32,19 +39,11 @@ facture.
 </p>
 
 <p>
-<<<<<<< HEAD
-<span id="setup-OS"></span><strong id="OS">OS</strong> : <del>Manjaro Linux</del>, je suis passé sur Ubuntu.
-</p>
-
-<p>
-<span id="setup-Window manager"></span><strong id="Window manager">Window manager</strong> : <del>i3wm</del>, sway
-=======
-<span id="setup-OS"></span><strong id="OS">OS</strong> : <del>Manjaro Linux</del>, <del>je suis passé sur Ubuntu.</del>, Now i use Arch btw.
+<span id="setup-OS"></span><strong id="OS">OS</strong> : <del>Manjaro Linux</del>, <del>je suis passé sur Ubuntu.</del>, Arch Linux
 </p>
 
 <p>
 <span id="setup-Window manager"></span><strong id="Window manager">Window manager</strong> : i3wm 
->>>>>>> update-setup
 </p>
 
 <p>
@@ -52,11 +51,7 @@ facture.
 </p>
 
 <p>
-<<<<<<< HEAD
-<span id="setup-Knowledge management"></span><strong id="Knowledge management">Knowledge management</strong> : vimwiki
-=======
 <span id="setup-Note taking"></span><strong id="Note taking">Note taking</strong> : vimwiki
->>>>>>> update-setup
 </p>
 
 <p>
@@ -64,11 +59,7 @@ facture.
 </p>
 
 <p>
-<<<<<<< HEAD
-<span id="setup-Launcher"></span><strong id="Launcher">Launcher</strong> : rofi
-=======
 <span id="setup-Launcher"></span><strong id="Launcher">Launcher</strong> : <del>rofi</del>, dmenu
->>>>>>> update-setup
 </p>
 
 <p>
@@ -100,5 +91,9 @@ facture.
 <a href="./">computer</a>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
