--- a/computer/tutoriels.html
+++ b/computer/tutoriels.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="tutoriels"><h1 id="tutoriels" class="header"><a href="#tutoriels">tutoriels</a></h1></div>
 
 <div id="tutoriels-Guides"><h2 id="Guides" class="header"><a href="#tutoriels-Guides">Guides</a></h2></div>
@@ -16,10 +23,7 @@
 <a href="tutoriels/git.html">git</a>
 <a href="code smells.html">code smells</a>
 <a href="tutoriels/pip.html">pip</a>
-<<<<<<< HEAD
-=======
 <a href="web hacking.html">web hacking</a>
->>>>>>> update-setup
 </p>
 
 
@@ -36,8 +40,6 @@ J'essaie donc de faire des tutos les plus courts possibles. 30 secondes est le
 maximum d'attention dont tu as besoin pour lire les tutos suivants.
 </p>
 
-<<<<<<< HEAD
-=======
 <p>
 Please PR if you find a mistake.
 </p>
@@ -70,7 +72,6 @@ For example with push :
 </p>
 
 
->>>>>>> update-setup
 <div id="tutoriels-How to install homebrew in Linux ?"><h2 id="How to install homebrew in Linux ?" class="header"><a href="#tutoriels-How to install homebrew in Linux ?">How to install homebrew in Linux ?</a></h2></div>
 
 <p>
@@ -342,5 +343,9 @@ Merge audio and image into a video file :
 <a href="./">computer</a>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
