--- a/computer/web hacking.html
+++ b/computer/web hacking.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="web hacking"><h1 id="web hacking" class="header"><a href="#web hacking">web hacking</a></h1></div>
 
 <div id="web hacking-Injection SQL"><h2 id="Injection SQL" class="header"><a href="#web hacking-Injection SQL">Injection SQL</a></h2></div>
@@ -18,5 +25,9 @@ d'intéragir avec une base de données de façon non prévue. Un attaquant peut
 donc lire, modifier le contenu de la base de données.
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
