--- a/computer_tutorials.html
+++ b/computer_tutorials.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="computer_tutorials"><h1 id="computer_tutorials" class="header"><a href="#computer_tutorials">computer_tutorials</a></h1></div>
 
 <p>
@@ -105,5 +112,9 @@ cf. <a href="https://github.com/dpelle/vim-Grammalecte/blob/master/doc/Grammalec
 <a href="tutorials.html">tutorials</a>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
