--- a/diary/2022-04-29.html
+++ b/diary/2022-04-29.html
@@ -7,16 +7,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
-<<<<<<< HEAD
-<div id="2022-04-29 - Premier poste"><h1 id="2022-04-29 - Premier poste" class="header"><a href="#2022-04-29 - Premier poste">2022-04-29 - Premier poste</a></h1></div>
-=======
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="2022-04-29 - Premier post"><h1 id="2022-04-29 - Premier post" class="header"><a href="#2022-04-29 - Premier post">2022-04-29 - Premier post</a></h1></div>
 
 <p>
 Mmmmh.
 </p>
->>>>>>> update-setup
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
