--- a/diary/2022-06-16.html
+++ b/diary/2022-06-16.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="Comment contrôler sa souris avec son clavier avec warpd ?"><h1 id="Comment contrôler sa souris avec son clavier avec warpd ?" class="header"><a href="#Comment contrôler sa souris avec son clavier avec warpd ?">Comment contrôler sa souris avec son clavier avec warpd ?</a></h1></div>
 
 <p>
@@ -77,11 +84,16 @@ Compatible macOS et Linux, X et Wayland. Le projet, en cours de développement
 <a href="https://github.com/rvaiya/warpd">se trouve ici.</a>
 </p>
 
-
+<hr />
 <p>
-<a href="diary/diary.html">blog</a>
-<a href="../index.html">index</a>
+<a href="diary/diary.html">blog</a> <a href="../index.html">index</a>
+<hr />
+<span id="Comment contrôler sa souris avec son clavier avec warpd ?-Utile ?-mouseless"></span><span class="tag" id="mouseless">mouseless</span> <span id="Comment contrôler sa souris avec son clavier avec warpd ?-Utile ?-linux"></span><span class="tag" id="linux">linux</span>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
