--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
-<div id="Antharia Jack"><h1 id="Antharia Jack" class="header"><a href="#Antharia Jack">Antharia Jack</a></h1></div>
-
-<div id="Antharia Jack-Teacher, designer."><h2 id="Teacher, designer." class="header"><a href="#Antharia Jack-Teacher, designer.">Teacher, designer.</a></h2></div>
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
+<div id="Teacher, designer."><h2 id="Teacher, designer." class="header"><a href="#Teacher, designer.">Teacher, designer.</a></h2></div>
 
 <p>
 Hello, I'm Antharia Jack.
@@ -23,7 +28,7 @@ Hello, I'm Antharia Jack.
 <a href="livres.html">livres</a> 
 <a href="citations.html">citations</a> 
 <a href="diary/diary.html">blog</a> 
-<a href="about.html">à propos</a>
+<a href="about.html">about</a>
 </p>
 <blockquote>
 The cave you fear to enter holds the treasure you seek.
@@ -39,11 +44,13 @@ activity of learners.
 John Holt
 </p>
 
-
-
 <p>
-<img src="../assets/creative_coding_vintage.jpg" />
+<img src="../../Documents/wiki_website/assets/creative_coding_vintage.jpg" />
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
