--- a/projects/sneakernet.html
+++ b/projects/sneakernet.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="sneakernet"><h1 id="sneakernet" class="header"><a href="#sneakernet">sneakernet</a></h1></div>
 
 <p>
@@ -53,5 +60,9 @@ Accept hardware only from persons you trust.
 <span id="sneakernet-What to do-filesharing"></span><span class="tag" id="filesharing">filesharing</span>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
