--- a/sicp_solutions.html
+++ b/sicp_solutions.html
@@ -7,10 +7,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="sicp_solutions"><h1 id="sicp_solutions" class="header"><a href="#sicp_solutions">sicp_solutions</a></h1></div>
 
 <div id="sicp_solutions-ex 1.2"><h2 id="ex 1.2" class="header"><a href="#sicp_solutions-ex 1.2">ex 1.2</a></h2></div>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
