--- a/tutoriels/git.html
+++ b/tutoriels/git.html
@@ -7,16 +7,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="git"><h1 id="git" class="header"><a href="#git">git</a></h1></div>
 
-<<<<<<< HEAD
-=======
 <p>
 WIP
 </p>
 
->>>>>>> update-setup
 <div id="git-Démarrer un dépôt Git"><h2 id="Démarrer un dépôt Git" class="header"><a href="#git-Démarrer un dépôt Git">Démarrer un dépôt Git</a></h2></div>
 
 <p>
@@ -401,5 +405,9 @@ pourrais faire :
 git clone <a href="https://github.com/libgit2/libgit2">https://github.com/libgit2/libgit2</a> my_libgit2
 </blockquote>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
