--- a/Docker basics.html
+++ b/Docker basics.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="Docker basics"><h1 id="Docker basics" class="header"><a href="#Docker basics">Docker basics</a></h1></div>
 
 <p>
@@ -45,13 +52,14 @@ elles ne planteront pas en cas de mise à jour de votre OS
 
 </ul>
 
-<<<<<<< HEAD
-=======
 
 <p>
 <a href="computer_tutorials.html">computer_tutorials</a>
 </p>
 
->>>>>>> update-setup
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
