--- a/citations.html
+++ b/citations.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="citations"><h1 id="citations" class="header"><a href="#citations">citations</a></h1></div>
 <blockquote>
 The cave you fear to enter holds the treasure you seek.
@@ -27,5 +34,9 @@ John Holt
 <a href="index.html">index</a>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
