--- a/computer/tutoriels/pip.html
+++ b/computer/tutoriels/pip.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="pip"><h1 id="pip" class="header"><a href="#pip">pip</a></h1></div>
 
 <p>
@@ -51,5 +58,9 @@ Voir la documentation de pip.
 <a href="...html">/computer</a>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
