--- a/diary/diary.html
+++ b/diary/diary.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="Diary"><h1 id="Diary" class="header"><a href="#Diary">Diary</a></h1></div>
 <div id="Diary-2022"><h2 id="2022" class="header"><a href="#Diary-2022">2022</a></h2></div>
 
@@ -25,5 +32,9 @@
 
 </ul>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
