--- a/livres.html
+++ b/livres.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="livres"><h1 id="livres" class="header"><a href="#livres">livres</a></h1></div>
 
 <div id="livres-Python"><h2 id="Python" class="header"><a href="#livres-Python">Python</a></h2></div>
@@ -57,5 +64,9 @@ Two scoops of Django
 <a href="index.html">index</a>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
