--- a/noise data.html
+++ b/noise data.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="noise data"><h1 id="noise data" class="header"><a href="#noise data">noise data</a></h1></div>
 
 <p>
@@ -17,8 +24,12 @@ performances.
 </p>
 
 <p>
-<img src="../assets/noisedata.png" />
+<img src="../../Documents/wiki_website/assets/noisedata.png" />
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
