--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="projects"><h1 id="projects" class="header"><a href="#projects">projects</a></h1></div>
 
 
@@ -20,5 +27,9 @@
 
 </ul>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
