--- a/projects/noisedata.html
+++ b/projects/noisedata.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="noisedata"><h1 id="noisedata" class="header"><a href="#noisedata">noisedata</a></h1></div>
 
 <p>
@@ -16,8 +23,12 @@ protocol. It's meant to be seen during live performances.
 </p>
 
 <p>
-<img src="../../projects/assets/noisedata.png" />
+<img src="../../../Documents/wiki_website/assets/noisedata.png" />
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
