--- a/sicp.html
+++ b/sicp.html
@@ -7,7 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="sicp"><h1 id="sicp" class="header"><a href="#sicp">sicp</a></h1></div>
 
 <p>
@@ -30,5 +37,9 @@ Les miennes sont là : <a href="sicp_solutions.html">sicp_solutions</a>
 <a href="computer.html">computer</a>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
