--- a/tutorials.html
+++ b/tutorials.html
@@ -7,12 +7,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+    <nav>
+       <a href="" class="nav-item">Projects</a>
+       <a href="" class="nav-item">Wiki</a>
+       <a href="" class="nav-item">Blog</a>
+       <a href="" class="nav-item">About</a>
+    </nav>
+    <div class="container">
+        
 <div id="tutorials"><h1 id="tutorials" class="header"><a href="#tutorials">tutorials</a></h1></div>
 
 <p>
 <a href="computer_tutorials.html">computer_tutorials</a>
 </p>
 
+    </div>
+    <footer>
+        <h2>Antharia Jack</h2>
+    </footer>
 </body>
 </html>
