--- a/diary/2022-06-16.html
+++ b/diary/2022-06-16.html
@@ -8,21 +8,24 @@
 </head>
 <body>
     <nav>
-       <a href="" class="nav-item">Projects</a>
-       <a href="" class="nav-item">Wiki</a>
-       <a href="" class="nav-item">Blog</a>
-       <a href="" class="nav-item">About</a>
+        <div class="nav">
+            <a href="./projects.html" class="nav-item">Projects</a>
+            <a href="" class="nav-item">Wiki</a>
+            <a href="./diary/diary.html" class="nav-item">Blog</a>
+            <a href="./about.html" class="nav-item">About</a>
+        </div>
     </nav>
     <div class="container">
         
-<div id="Comment contrôler sa souris avec son clavier avec warpd ?"><h1 id="Comment contrôler sa souris avec son clavier avec warpd ?" class="header"><a href="#Comment contrôler sa souris avec son clavier avec warpd ?">Comment contrôler sa souris avec son clavier avec warpd ?</a></h1></div>
+<div id="warpd"><h1 id="warpd" class="header"><a href="#warpd">warpd</a></h1></div>
+<div id="warpd-Comment contrôler sa souris avec son clavier avec warpd ?"><h2 id="Comment contrôler sa souris avec son clavier avec warpd ?" class="header"><a href="#warpd-Comment contrôler sa souris avec son clavier avec warpd ?">Comment contrôler sa souris avec son clavier avec warpd ?</a></h2></div>
 
 <p>
 Pour aller plus loin dans le délire <em>mouseless</em>, voici un outil en WIP qui
 permet de contrôler sa souris de 3 manières différentes.
 </p>
 
-<div id="Comment contrôler sa souris avec son clavier avec warpd ?-Normal mode"><h3 id="Normal mode" class="header"><a href="#Comment contrôler sa souris avec son clavier avec warpd ?-Normal mode">Normal mode</a></h3></div>
+<div id="warpd-Comment contrôler sa souris avec son clavier avec warpd ?-Normal mode"><h3 id="Normal mode" class="header"><a href="#warpd-Comment contrôler sa souris avec son clavier avec warpd ?-Normal mode">Normal mode</a></h3></div>
 
 <p>
 En pressant Alt-Meta-c, on peut utiliser "hjkl", les touches basiques de
@@ -42,7 +45,7 @@ On peut même faire du <em>dragging</em> avec la touche v.
 <img src="https://github.com/rvaiya/warpd/raw/master/demo/discrete2.gif" />
 </p>
 
-<div id="Comment contrôler sa souris avec son clavier avec warpd ?-Hint mode"><h3 id="Hint mode" class="header"><a href="#Comment contrôler sa souris avec son clavier avec warpd ?-Hint mode">Hint mode</a></h3></div>
+<div id="warpd-Comment contrôler sa souris avec son clavier avec warpd ?-Hint mode"><h3 id="Hint mode" class="header"><a href="#warpd-Comment contrôler sa souris avec son clavier avec warpd ?-Hint mode">Hint mode</a></h3></div>
 
 <p>
 Pour ceux qui sont familiers d'extensions comme
@@ -56,7 +59,7 @@ rapidement sur la zone souhaitée.
 <img src="https://github.com/rvaiya/warpd/raw/master/demo/hints.gif" />
 </p>
 
-<div id="Comment contrôler sa souris avec son clavier avec warpd ?-Grid mode"><h3 id="Grid mode" class="header"><a href="#Comment contrôler sa souris avec son clavier avec warpd ?-Grid mode">Grid mode</a></h3></div>
+<div id="warpd-Comment contrôler sa souris avec son clavier avec warpd ?-Grid mode"><h3 id="Grid mode" class="header"><a href="#warpd-Comment contrôler sa souris avec son clavier avec warpd ?-Grid mode">Grid mode</a></h3></div>
 
 <p>
 Et enfin, celui qui demande le plus d'adaptation mais que je trouve le plus
@@ -70,7 +73,7 @@ d'accélerer le mouvement du curseur par rappor au mode Normal.
 <img src="https://github.com/rvaiya/warpd/raw/master/demo/warp.gif" />
 </p>
 
-<div id="Comment contrôler sa souris avec son clavier avec warpd ?-Utile ?"><h3 id="Utile ?" class="header"><a href="#Comment contrôler sa souris avec son clavier avec warpd ?-Utile ?">Utile ?</a></h3></div>
+<div id="warpd-Comment contrôler sa souris avec son clavier avec warpd ?-Utile ?"><h3 id="Utile ?" class="header"><a href="#warpd-Comment contrôler sa souris avec son clavier avec warpd ?-Utile ?">Utile ?</a></h3></div>
 
 <p>
 Pour les <em>keyboard driven rices</em>, pourquoi pas. Même si un pad reste plus
@@ -88,7 +91,7 @@ Compatible macOS et Linux, X et Wayland. Le projet, en cours de développement
 <p>
 <a href="diary/diary.html">blog</a> <a href="../index.html">index</a>
 <hr />
-<span id="Comment contrôler sa souris avec son clavier avec warpd ?-Utile ?-mouseless"></span><span class="tag" id="mouseless">mouseless</span> <span id="Comment contrôler sa souris avec son clavier avec warpd ?-Utile ?-linux"></span><span class="tag" id="linux">linux</span>
+<span id="warpd-Comment contrôler sa souris avec son clavier avec warpd ?-Utile ?-mouseless"></span><span class="tag" id="mouseless">mouseless</span> <span id="warpd-Comment contrôler sa souris avec son clavier avec warpd ?-Utile ?-linux"></span><span class="tag" id="linux">linux</span>
 </p>
 
     </div>
