--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <nav>
-       <a href="" class="nav-item">Projects</a>
-       <a href="" class="nav-item">Wiki</a>
-       <a href="" class="nav-item">Blog</a>
-       <a href="" class="nav-item">About</a>
+        <div class="nav">
+            <a href="./projects.html" class="nav-item">Projects</a>
+            <a href="" class="nav-item">Wiki</a>
+            <a href="./diary/diary.html" class="nav-item">Blog</a>
+            <a href="./about.html" class="nav-item">About</a>
+        </div>
     </nav>
     <div class="container">
         
@@ -23,13 +25,38 @@ Hello, I'm Antharia Jack.
 
 <p>
 <a href="projects.html">projects</a> 
-<a href="computer.html">computer</a> 
-<a href="audio.html">audio</a> 
-<a href="livres.html">livres</a> 
-<a href="citations.html">citations</a> 
+<a href="wiki.html">wiki</a>
 <a href="diary/diary.html">blog</a> 
 <a href="about.html">about</a>
 </p>
+
+<p>
+What I'm doing now :
+</p>
+<ul>
+<li>
+Learning :
+
+<ul>
+<li>
+Docker
+
+<li>
+Svelte
+
+</ul>
+<li>
+Coding :
+
+<ul>
+<li>
+<a href="projects/earthlist.html">Earthlist</a>
+
+<li>
+<a href="projects/terminal.html">Terminal</a>
+
+</ul>
+</ul>
 <blockquote>
 The cave you fear to enter holds the treasure you seek.
 </blockquote>
