--- a/projects.html
+++ b/projects.html
@@ -8,24 +8,62 @@
 </head>
 <body>
     <nav>
-       <a href="" class="nav-item">Projects</a>
-       <a href="" class="nav-item">Wiki</a>
-       <a href="" class="nav-item">Blog</a>
-       <a href="" class="nav-item">About</a>
+        <div class="nav">
+            <a href="./projects.html" class="nav-item">Projects</a>
+            <a href="" class="nav-item">Wiki</a>
+            <a href="./diary/diary.html" class="nav-item">Blog</a>
+            <a href="./about.html" class="nav-item">About</a>
+        </div>
     </nav>
     <div class="container">
         
 <div id="projects"><h1 id="projects" class="header"><a href="#projects">projects</a></h1></div>
 
 
+<div id="projects-dev"><h2 id="dev" class="header"><a href="#projects-dev">dev</a></h2></div>
 <ul>
 <li>
-<a href="projects/sneakernet.html">sneakernet</a>
+<a href="projects/noisedata.html">NoiseData</a>
 
 <li>
-<a href="projects/noisedata.html">noisedata</a>
+<a href="projects/nod.html">NOD</a>
+
+<li>
+<a href="projects/earthlist.html">Earthlist</a>
 
 </ul>
+<div id="projects-games"><h2 id="games" class="header"><a href="#projects-games">games</a></h2></div>
+<ul>
+<li>
+<a href="projects/terminal.html">Terminal</a>
+
+<li>
+<a href="projects/carrelets.html">Carrelets</a>
+
+</ul>
+<div id="projects-social"><h2 id="social" class="header"><a href="#projects-social">social</a></h2></div>
+<ul>
+<li>
+<a href="projects/le séquenceur.html">le Séquenceur</a>
+
+<li>
+<a href="projects/sneakernet.html">Sneakernet</a>
+
+</ul>
+<div id="projects-art"><h2 id="art" class="header"><a href="#projects-art">art</a></h2></div>
+<ul>
+<li>
+<a href="projects/photo.html">photo</a>
+
+<li>
+<a href="projects/illustration.html">illustration</a>
+
+</ul>
+
+<hr />
+<p>
+<a href="index.html">index</a>
+</p>
 
     </div>
     <footer>
