--- a/index.html
+++ b/index.html
@@ -9,30 +9,53 @@
 <body>
     <nav>
         <div class="nav">
-            <a href="./projects.html" class="nav-item">Projects</a>
-            <a href="" class="nav-item">Wiki</a>
-            <a href="./diary/diary.html" class="nav-item">Blog</a>
-            <a href="./about.html" class="nav-item">About</a>
+            <a href="/projects.html" class="nav-item">Projects</a>
+            <a href="/wiki.html" class="nav-item">Wiki</a>
+            <a href="/diary/diary.html" class="nav-item">Blog</a>
+            <a href="/about.html" class="nav-item">About</a>
         </div>
     </nav>
     <div class="container">
         
-<div id="Teacher, designer."><h2 id="Teacher, designer." class="header"><a href="#Teacher, designer.">Teacher, designer.</a></h2></div>
+<div id="Designer &amp; problem solver"><h2 id="Designer &amp; problem solver" class="header"><a href="#Designer &amp; problem solver">Designer &amp; problem solver</a></h2></div>
 
 <p>
-Hello, I'm Antharia Jack.
+Hello, I'm Antharia Jack. And this is what I do :
+</p>
+<ul>
+<li>
+I help people solve their problems with code and design. 
+
+<li>
+I improve project and knowledge management processes.
+
+<li>
+I teach people how to learn.
+
+</ul>
+ 
+<p>
+You'll find notes on these fields on my <a href="wiki.html">wiki</a>.
 </p>
 
 <p>
-<a href="projects.html">projects</a> 
-<a href="wiki.html">wiki</a>
-<a href="diary/diary.html">blog</a> 
-<a href="about.html">about</a>
+I share what I learn on my <a href="diary/diary.html">blog</a>.
 </p>
 
 <p>
-What I'm doing now :
+You can read about what I work on on my <a href="projects.html">projects</a> page.
 </p>
+
+<p>
+More details on my <a href="about.html">about</a> page.
+</p>
+
+<p>
+I write in french and english.
+</p>
+
+
+<div id="Now"><h2 id="Now" class="header"><a href="#Now">Now</a></h2></div>
 <ul>
 <li>
 Learning :
@@ -57,6 +80,8 @@ Coding :
 
 </ul>
 </ul>
+
+<div id="Quotes"><h2 id="Quotes" class="header"><a href="#Quotes">Quotes</a></h2></div>
 <blockquote>
 The cave you fear to enter holds the treasure you seek.
 </blockquote>
